--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@tkustov/dif",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Factory-based DI",
   "main": "lib/index.js",
-  "types": "src/index.ts",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --project tsconfig.json"
+    "build": "tsc --project tsconfig.json",
+    "prepublishOnly": "NODE_ENV=production npm run build"
   },
   "repository": {
     "type": "git",
