--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "declaration": true
   },
   "include": [
     "./src/*.ts"
