--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@tkustov/dif",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Factory-based DI",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prebuild": "rm -rf ./lib",
-    "build": "tsc --project tsconfig.json",
+    "build": "tsc --project tsconfig.build.json",
     "prepublishOnly": "NODE_ENV=production npm run build"
   },
   "repository": {
@@ -22,7 +22,10 @@
   "homepage": "https://github.com/tkustov/dif#readme",
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   }
 }
