--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,10 +1,11 @@
 {
   "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
-    "outDir": "./lib",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
-    "declaration": true
+    "outDir": "./lib/esm",
+    "target": "ES6",
+    "module": "ES6",
+    "moduleResolution": "nodenext",
+    "declaration": false
   },
   "include": [
     "./src/**.ts"
