--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
     "outDir": "./lib",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
+    "module": "ES6",
+    "moduleResolution": "nodenext",
     "declaration": true
   },
   "include": [
