--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "scripts": {
     "test": "jest",
     "prebuild": "rm -rf ./lib",
-    "build": "tsc --project tsconfig.types.json && tsc --project tsconfig.esm.json && tsc --project tsconfig.cjs.json",
+    "build:cjs": "tsc --project tsconfig.cjs.json",
+    "postbuild:cjs": "echo \"{ \\\"type\\\": \\\"commonjs\\\" }\" > lib/cjs/package.json",
+    "build:esm": "tsc --project tsconfig.esm.json",
+    "build:types": "tsc --project tsconfig.types.json",
+    "build": "npm run build:types && npm run build:esm && npm run build:cjs",
     "prepublishOnly": "NODE_ENV=production npm run build"
   },
   "repository": {
